cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(TowSum TowSum1.cpp)
add_executable(ReverseKGroup25 ReverseKGroup25.cpp)
add_executable(RemoveElements27 RemoveElements27.cpp)
add_executable(StrStr28 StrStr28.cpp)
add_executable(Divide29 Divide29.cpp)
add_executable(NextPermutation31 NextPermutation31.cpp)
add_executable(trap42 trap42.cpp)
add_executable(leetcode912 QuickSort912.cpp)
add_executable(QuickSort QuickSort.cpp)
add_executable(InsertionSortList InsertionSortList147.cpp)